--- a/AlgorithmTests/AlgorithmTests.csproj
+++ b/AlgorithmTests/AlgorithmTests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BubbleSort\BubbleSort.csproj" />
+    <ProjectReference Include="..\InsertionSort\InsertionSort.csproj" />
     <ProjectReference Include="..\SelectionSort\SelectionSort.csproj" />
   </ItemGroup>
 
